[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/game_results.gd" id="1_v4m3r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_overlay"]
bg_color = Color(0.105882, 0.262745, 0.196078, 0.1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(1, 1, 1, 1)
corner_radius_all = 64
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
bg_color = Color(0.105882, 0.262745, 0.196078, 1)
corner_radius_all = 32

[node name="GameResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4m3r")

[node name="ColorRect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_overlay")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(400, 480)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBox" type="VBoxContainer" parent="Center/Card"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Status" type="Label" parent="Center/Card/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.262745, 0.196078, 1)
theme_override_font_sizes/font_size = 56
text = "Victory"
horizontal_alignment = 1

[node name="LevelInfo" type="Label" parent="Center/Card/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.262745, 0.196078, 0.4)
theme_override_font_sizes/font_size = 20
text = "MATCH_COMPLETED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Center/Card/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Center/Card/VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NextBtn" type="Button" parent="Center/Card/VBox/Buttons"]
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
text = "Continue"

[node name="RetryBtn" type="Button" parent="Center/Card/VBox/Buttons"]
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.105882, 0.262745, 0.196078, 0.6)
theme_override_font_sizes/font_size = 22
flat = true
text = "Try Again"

[node name="HomeBtn" type="Button" parent="Center/Card/VBox/Buttons"]
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.105882, 0.262745, 0.196078, 0.6)
theme_override_font_sizes/font_size = 22
flat = true
text = "Go Home"
